# VelcroOpenEngine

./: .gitignore  Cargo.toml
my-macro/: Cargo.toml
my-macro/src/: elapsed.rs  lib.rs
src/: Makefile  main.rs
velcro-core/: Cargo.toml
velcro-core/src/: lib.rs  sstorage.rs  type_traits.rs  visitor.rs
velcro-core/src/allocator/: memory.rs  payload.rs
velcro-core/src/interface/: environment.rs  mod.rs
velcro-core/src/math/: VertexContainer.rs  aabb.rs  bits.rs  capsule.rs  cityhash.rs  color.rs  common_sse.rs  crc.rs  frustum.rs  hemisphere.rs  intersect.rs  line_segment.rs  math_utils.rs  matrix3x3.rs  matrix3x4.rs  matrix4x4.rs  mod.rs  obb.rs  plane.rs  quaternion.rs  random.rs  ray.rs  sfmt.rs  shape_intersection.rs  simd_math.rs  simd_math_vec1.rs  simd_math_vec1_see.rs  simd_math_vec1_sse.rs  simd_math_vec2.rs  simd_math_vec2_sse.rs  simd_math_vec3_sse.rs  simd_math_vec4_sse.rs  sphere.rs  spline.rs  transform.rs  uuid.rs  vector.rs  vector2.rs  vector3.rs  vector4.rs  (+1 more)
velcro-core/src/math/constants/: math_utils.rs  mod.rs
velcro-core/src/math/intersect/: interpolation_sample.rs  intersect_point.rs  intersect_segment.rs  mod.rs
velcro-core/src/math/vsimd/: neon.rs  sse.rs
velcro-core/src/parallel/: exponential.rs  mod.rs  spin_mutex.rs
velcro-core/src/rtti/: mod.rs  reflect.rs  sstorage.rs  type_traits.rs  variable.rs  visitor.rs
velcro-core/src/vmath/: cityhash.rs  sfmt.rs  uuid.rs
velcro-core/src/vmath/vsimd/: mod.rs  sse.rs
velcro-core/src/vstd/: mod.rs  vhash.rs
velcro-derive/: Cargo.toml
velcro-derive/src/: context.rs  lib.rs  reflect.rs  typeinfo.rs  visit.rs  vobject.rs
velcro-derive/src/context/: args.rs  utils.rs
velcro-derive/src/derive/: mod.rs
velcro-derive/src/derive/utils/: mod.rs  path_to_string.rs
velcro-derive/src/reflect/: args.rs  property.rs  syntax.rs
velcro-derive/src/utils/: mod.rs  uuid.rs
velcro-derive/src/visit/: args.rs  utils.rs
velcro-dylib/: Cargo.toml
velcro-dylib/src/: lib.rs
velcro-impl/: Cargo.toml
velcro-impl/src/: lib.rs
velcro-math/: Cargo.toml
velcro-math/src/: lib.rs
velcro-math/src/math/: mod.rs  sha1.rs  uuid.rs
velcro-math/src/math/vsimd/: neon.rs
velcro-open/: Cargo.toml
velcro-open/src/: lib.rs
velcro-rtti/: Cargo.toml
velcro-rtti/src/: lib.rs  reflect.rs  reflect_context.rs  sstorage.rs  type_traits.rs  variable.rs  visitor.rs
velcro-rtti/src/memory/: handle.rs  memory_block.rs  mod.rs
velcro-rtti/src/reflect/: std_impls.rs
velcro-utils/: Cargo.toml
velcro-utils/src/: base64.rs  cityhash.rs  hasder.rs  lib.rs  uuid.rs
vmath/: Cargo.toml
vmath/src/: cityhash.rs  lib.rs  sfmt.rs  sha1.rs  simd.rs  uuid.rs
