[workspace]
members = [
    "velcro-core", "velcro-derive", 
    "velcro-dylib", 
    "velcro-impl", "velcro-math", 
    "velcro-open"]
resolver = "2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
debug = true

[profile.github-ci]
inherits = "dev"
strip = "symbols"
debug = false
opt-level = 3
