[workspace]
members = [
    "velcro-derive", 
    "velcro-core", 
    "velcro-dylib", 
    "velcro-impl", 
    "velcro-open", "velcro-utils"]
resolver = "2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
debug = true

[profile.github-ci]
inherits = "dev"
strip = "symbols"
debug = false
opt-level = 3
