[package]
name = "velcro-core"
version = "0.1.1"
edition = "2021"
license = "MIT"
#authors = ["liang yu <296270991@qq.com>"]
description = "learning rust"
#keywords = ["game", "engine", "3d", "network"]
documentation = "https://docs.rs/velcro-core"
#rust-version = "1.79"
repository = "https://github.com/yamakiller/velcro-open"




[dependencies]
#crypto_api_osrandom = {version = "0.2.0"}
#syn = "0.12.13"
#quote = "0.4.2"
#proc-macro2 = "0.2.2"
#darling = "0.20.10"

[features]


#default = ["stdarch_x86_mm_shuffle"]
#enable_profiler = []