[package]
name = "velcro-core"
version = "0.1.1"
edition = "2021"
license = "MIT"
#authors = ["liang yu <296270991@qq.com>"]
description = "learning rust"
#keywords = ["game", "engine", "3d", "network"]
documentation = "https://docs.rs/velcro-core"
#rust-version = "1.79"
repository = "https://github.com/yamakiller/velcro-open"



[dependencies]
velcro-utils = {path = "../velcro-utils", version = "0.1.1"}
velcro-derive = {path = "../velcro-derive", version = "0.1.1"}
crypto_api_osrandom = " 0.2.0"
memoffset = "0.9.0"
lazy_static = "1.4.0"
num-traits = "0.2.14"
parking_lot = "0.12.0"
byteorder = "1.4.3"
bitflags = "2.2.1"
serde = { version = "1", features = ["derive"] }

[features]

