[package]
name = "velcro-derive"
version = "0.1.1"
edition = "2021"

[features]
diagnostics = []
suggestions = ["strsim"]

[dependencies]
ident_case = "1.0.1"
proc-macro2 = "1.0.37"
quote = "1.0.18"
syn = { version = "2.0.15", features = ["full", "extra-traits"] }
fnv = "1.0.7"
strsim = { version = "0.11.1", optional = true }